<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PScratchPad</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="label_button_load">Reload</string>
    <string name="label_button_save">Save</string>
    <string name="error_rest_SSL">Error SSL connection</string>
    <string name="error_rest_general">An error occurred: </string>
    <string name="error_rest_authentication">Error on authentication</string>
    <string name="label_settings_connection">Connection</string>
    <string name="label_settings_url_title">Host URL</string>
    <string name="label_settings_name_title">Pad Name</string>
    <string name="label_settings_ok">OK</string>
    <string name="label_settings_cancel">Cancel</string>
    <string name="label_settings_authentication">HTTP Basic Authentication</string>
    <string name="label_settings_username_title">Username</string>
    <string name="label_settings_password_title">Password</string>
    <string name="label_settings_encryption">Encryption</string>
    <string name="label_settings_passphrase_title">Passphrase</string>
    <string name="label_settings_summary_empty">&lt;empty&gt;</string>
    <string name="label_settings_summary_password">*****</string>
    <string name="message_url_not_set">Host URL not configured!</string>
    <string name="message_name_not_set">Name not configured!</string>
    <string name="setting_url">url</string>
    <string name="setting_name">name</string>
    <string name="setting_username">username</string>
    <string name="setting_password">password</string>
    <string name="setting_passphrase">passphrase</string>
    <string name="message_rest_save_ok">Pad saved!</string>
    <string name="message_rest_save_not_ok">Error saving pad!</string>
    <string name="label_about">PScratchPad is licensed as Apache 2.0\nhttp://www.apache.org/licenses/\n\nand is hosted on
    github:\nhttps://github.com/phvogt/PScratchPad-Android\n\nIcon for app is
    "Hospital Leaflet" by
    Freepik\nhttp://www.freepik.com/\n and is licensed under CC BY
    3.0</string>

</resources>